--- a/Unittesting/src/main/resources/application.properties
+++ b/Unittesting/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.datasource.url=jdbc:h2:mem:test
