--- a/springredis/pom.xml
+++ b/springredis/pom.xml
@@ -53,6 +53,14 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-docker-compose</artifactId>
 		</dependency>
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>io.micrometer</groupId>
+		    <artifactId>micrometer-tracing-bridge-brave</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
