--- a/complaint-manager/pom.xml
+++ b/complaint-manager/pom.xml
@@ -160,8 +160,17 @@
 		    <artifactId>lombok</artifactId>
 		    <scope>provided</scope>
 		</dependency>
-
-</dependencies>
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.micrometer/context-propagation -->
+		<dependency>
+		    <groupId>io.micrometer</groupId>
+		    <artifactId>context-propagation</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
