--- a/springredis/pom.xml
+++ b/springredis/pom.xml
@@ -58,8 +58,18 @@
     		<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+		<dependency>
 		    <groupId>io.micrometer</groupId>
 		    <artifactId>micrometer-tracing-bridge-brave</artifactId>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.micrometer/context-propagation -->
+		<dependency>
+		    <groupId>io.micrometer</groupId>
+		    <artifactId>context-propagation</artifactId>
+		    <version>1.1.1</version>
 		</dependency>
 	</dependencies>
 
