--- a/complaint-manager/pom.xml
+++ b/complaint-manager/pom.xml
@@ -170,6 +170,21 @@
 		    <artifactId>context-propagation</artifactId>
 		    <version>1.1.1</version>
 		</dependency>
+		<dependency>
+    		<groupId>io.springfox</groupId>
+    		<artifactId>springfox-swagger2</artifactId>
+    		<version>3.0.0</version>
+		</dependency>
+		<dependency>
+    		<groupId>io.springfox</groupId>
+    		<artifactId>springfox-swagger-ui</artifactId>
+    		<version>3.0.0</version>
+		</dependency>
+		<dependency>
+    		<groupId>io.springfox</groupId>
+    		<artifactId>springfox-boot-starter</artifactId>
+    		<version>3.0.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
