--- a/course-api/pom.xml
+++ b/course-api/pom.xml
@@ -65,6 +65,21 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+    		<groupId>org.springframework.security.oauth.boot</groupId>
+    		<artifactId>spring-security-oauth2-autoconfigure</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+    		<groupId>org.apache.tomcat</groupId>
+    		<artifactId>tomcat-jasper</artifactId>
+    		<version>9.0.82</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
