--- a/course-api/pom.xml
+++ b/course-api/pom.xml
@@ -66,6 +66,10 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
     		<groupId>org.springframework.security.oauth.boot</groupId>
     		<artifactId>spring-security-oauth2-autoconfigure</artifactId>
 		</dependency>
