--- a/course-api/src/main/resources/application.properties
+++ b/course-api/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.driver-class-name=org.sqlite.JDBC
 
 spring.application.name=springimplant-course-api
 server.port=8002
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
