--- a/rabbitmq-deadletter-queue/src/main/resources/application.properties
+++ b/rabbitmq-deadletter-queue/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8082
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
+rabbitmq.queue.name=springimplant
+rabbitmq.exchange.name = springimplant_exchange
+rabbitmq.routing_key.name = springimplant_routing_key
