--- a/rabbitmq-deadletter-queue/src/main/resources/application.properties
+++ b/rabbitmq-deadletter-queue/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.rabbitmq.password=guest
 rabbitmq.queue.name=springimplant
 rabbitmq.exchange.name = springimplant_exchange
 rabbitmq.routing_key.name = springimplant_routing_key
+rabbitmq.json.queue.name = springimplant_json
+rabbitmq.json.routing_key.name = springimplant_json_key
