--- a/currency-service/pom.xml
+++ b/currency-service/pom.xml
@@ -61,6 +61,18 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.webjars/js-cookie -->
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>js-cookie</artifactId>
+		    <version>2.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
