--- a/connectionpooling/pom.xml
+++ b/connectionpooling/pom.xml
@@ -59,6 +59,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
     		<groupId>com.mchange</groupId>
     		<artifactId>c3p0</artifactId>
     		<version>0.10.1</version>
@@ -88,6 +93,10 @@
 		    <groupId>com.treblle</groupId>
 		    <artifactId>treblle-spring-boot-starter</artifactId>
 		    <version>2.0.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-batch</artifactId>
 		</dependency>
 	</dependencies>
 
