--- a/connectionpooling/src/main/resources/application.properties
+++ b/connectionpooling/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/bms
 spring.datasource.username=root
 spring.datasource.password=root@04G
 server.port=8081
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+treblle.apiKey=oRJTpFWhFD8LbKewavXENyJgiC54o5NT
+treblle.projectId=5lrcsuo36xhRR5ME
+spring.batch.jdbc.initialize-schema=always
+spring.batch.job.enabled=false
