--- a/connectionpooling/src/main/resources/application.properties
+++ b/connectionpooling/src/main/resources/application.properties
@@ -8,3 +8,5 @@ treblle.apiKey=oRJTpFWhFD8LbKewavXENyJgiC54o5NT
 treblle.projectId=5lrcsuo36xhRR5ME
 spring.batch.jdbc.initialize-schema=always
 spring.batch.job.enabled=false
+#spring.jpa.properties.hibernate.jdbc.batch_size = 500
+spring.jpa.hibernate.ddl-auto=create-drop
