--- a/course-api/pom.xml
+++ b/course-api/pom.xml
@@ -110,6 +110,14 @@
         	<artifactId>treblle-spring-boot-starter</artifactId>
         	<version>1.0.0</version>
     	</dependency>
+    	<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zipkin</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
