--- a/course-api/src/main/resources/application.properties
+++ b/course-api/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:sqlite:cms.db
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.zipkin.base-url=http://localhost:9411/
 
 spring.application.name=springimplant-course-api
 server.port=8081
