--- a/currency-service/src/main/resources/application.properties
+++ b/currency-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8009
 management.server.port=8009
 management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=beans,mappings,sessions
 spring.application.name=springimplant-currency-service
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
