--- a/currency-service/src/main/resources/application.properties
+++ b/currency-service/src/main/resources/application.properties
@@ -28,3 +28,6 @@ spring.kafka.consumer.properties.spring.json.type.mapping=myUser1:com.springimpl
 spring.kafka.consumer.properties.spring.json.type.mapping=partner:com.springimplant.currencyservice.contract.DeliveryPartnerData
 
 kafka.health.indicator.timeout.ms=100
+
+spring.cloud.config.uri=http://localhost:8888
+
