--- a/bean-lifecycle-web/src/main/resources/application.properties
+++ b/bean-lifecycle-web/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.main.web-application-type=none
+#spring.main.web-application-type=none
 server.port=8002
 spring.application.name=beanlifecycleweb
 spring.datasource.url=jdbc:mysql://localhost:3306/bms
