--- a/bean-lifecycle-web/src/main/resources/application.properties
+++ b/bean-lifecycle-web/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.application.name=beanlifecycleweb
 spring.datasource.url=jdbc:mysql://localhost:3306/bms
 spring.datasource.username=root
 spring.datasource.password=root@04G
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
